@@ -1,5 +1,6 @@
 v0.3.0rc - XXXX
   - Actions: added FadeOutBLTiles, FadeOutUpTiles, FadeOutDownTiles
+  - Actions: added SplitCols, SplitRows
   - Actions: renamed FadeOutTiles to FadeOutTRTiles
   - Actions: added Ripple3D effect
   - Actions: Waves. parameter horizontal_sin and vertical_sin renamed to hsin and vsin
@@ -9,6 +10,7 @@ v0.3.0rc - XXXX
   - Transitions: renamed ShuffleTilesTransition -> ShuffleTransition
   - Transitions: reanamed CurtainTransition to FadeTRTransition
   - Transitions: added FadeBLTransition, FadeUpTransition, FadeDownTransition
+  - Transition: added SplitColsTransition, SplitRowsTransition
   - Transitions: added test for transitions
 
 v0.3.0beta0 - May 5th, 2008
